--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "astro": "^1.6.10",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "pako": "^2.1.0"
   },
   "devDependencies": {
     "@astrojs/react": "^1.2.2",
+    "@types/pako": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
