--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@astrojs/react": "^1.2.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/pako": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
