--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^3.1.0",
     "astro": "^1.6.10",
     "crypto-js": "^4.1.1",
     "pako": "^2.1.0"
