--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@astrojs/node": "^3.1.0",
     "astro": "^1.6.10",
     "crypto-js": "^4.1.1",
-    "pako": "^2.1.0"
+    "pako": "^2.1.0",
+    "pngjs": "^6.0.0"
   },
   "devDependencies": {
     "@astrojs/react": "^1.2.2",
     "@types/crypto-js": "^4.1.1",
     "@types/pako": "^2.0.0",
+    "@types/pngjs": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
